[tool.poetry]
name = "cw-3-"
version = "0.1.0"
description = ""
authors = ["alexandr antsiferov <sania.antsiferoff@yandex.ru>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
